// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadContainer should render correctly with default props 1`] = `
<thead>
  <tr
    className="MuiTableRow-root-1 MuiTableRow-typeHead-2"
  >
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-6 MuiTableCell-paddingDefault-11 MuiTableCell-typeHead-8"
      scope="col"
    >
      <div
        className="MuiTooltip-root-14"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-28 MuiTableSortLabel-root-23"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          position
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-30 MuiTableSortLabel-icon-25 MuiTableSortLabel-desc-26"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-15 MuiTooltip-popperClose-16"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-17 MuiTooltip-tooltipBottom-21"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-6 MuiTableCell-paddingDefault-11 MuiTableCell-typeHead-8"
      scope="col"
    >
      <div
        className="MuiTooltip-root-14"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-28 MuiTableSortLabel-root-23"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          team
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-30 MuiTableSortLabel-icon-25 MuiTableSortLabel-desc-26"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-15 MuiTooltip-popperClose-16"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-17 MuiTooltip-tooltipBottom-21"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-6 MuiTableCell-paddingDefault-11 MuiTableCell-typeHead-8"
      scope="col"
    >
      <div
        className="MuiTooltip-root-14"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-28 MuiTableSortLabel-root-23"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          points
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-30 MuiTableSortLabel-icon-25 MuiTableSortLabel-desc-26"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-15 MuiTooltip-popperClose-16"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-17 MuiTooltip-tooltipBottom-21"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`TableHeadContainer should render correctly with different props 1`] = `
<thead>
  <tr
    className="MuiTableRow-root-1 MuiTableRow-typeHead-2"
  >
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-6 MuiTableCell-paddingDefault-11 MuiTableCell-typeHead-8"
      scope="col"
    >
      <div
        className="MuiTooltip-root-14"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-28 MuiTableSortLabel-root-23"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          position
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-30 MuiTableSortLabel-icon-25 MuiTableSortLabel-desc-26"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-15 MuiTooltip-popperClose-16"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-17 MuiTooltip-tooltipBottom-21"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-6 MuiTableCell-paddingDefault-11 MuiTableCell-typeHead-8"
      scope="col"
    >
      <div
        className="MuiTooltip-root-14"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-28 MuiTableSortLabel-root-23 MuiTableSortLabel-active-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          team
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-30 MuiTableSortLabel-icon-25 MuiTableSortLabel-desc-26"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-15 MuiTooltip-popperClose-16"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-17 MuiTooltip-tooltipBottom-21"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-6 MuiTableCell-paddingDefault-11 MuiTableCell-typeHead-8"
      scope="col"
    >
      <div
        className="MuiTooltip-root-14"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-28 MuiTableSortLabel-root-23"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          points
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-30 MuiTableSortLabel-icon-25 MuiTableSortLabel-desc-26"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-15 MuiTooltip-popperClose-16"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-17 MuiTooltip-tooltipBottom-21"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;
